# test-rust-wasm

./: .env  .gitignore  Cargo.toml  Makefile  justfile  readme.md
.cargo/: config.toml
helpers/: index.ts  package-lock.json  package.json
public/: index.js
rust-cli/: Cargo.toml
rust-cli/src/: main.rs
rust-wasm/: Cargo.toml
src/: lib.rs
