[package]
name = "test-rust-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2.92"

[dependencies.polars]
version = "0.41.3"
default-features = false
features = [
    'fmt_no_tty'
]
