[package]
name = "test-rust-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
rand = "0.8.5"
serde_json = "1.0.120"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"


[dependencies.web-sys]
version = "0.3.69"
features = [
    "Window",
    "Performance",
]


[dependencies.reqwest]
version = "0.12.5"
features = [
    "json"
]

[dependencies.polars]
version = "0.41.3"
default-features = false
features = [
    'fmt_no_tty',
    'json',
]
